# tetris

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  scratch.txt  tetris
bin2/: Makefile  cmake_install.cmake
src/: block.cpp  block.h  game.cpp  game.h  l_shape.cpp  l_shape.h  main.cpp  shape.cpp  shape.h  shape_manager.cpp  shape_manager.h  staging_area.cpp  staging_area.h  z_shape.cpp  z_shape.h
